# ito-chatbot-api

./: .gitignore  .isort.cfg  Dockerfile  README.md  debug.sh  pyproject.toml  requirements.txt
.devcontainer/: .env.example  Dockerfile  devcontainer.json
docs/: 環境について.md
src/: __init__.py  ai_search.py  azure_openai.py  config.py  main.py
src/controller/: azure_ai_search.py  azure_openai.py  router.py
src/controllers/: azure_ai_search.py  azure_openai.py  router.py
src/core/: config.py
src/infrastructure/: azure_ai_search.py
src/infrastructure/azure/openai/: model.py
src/models/: ask_input.py
src/service/: azure_ai_search.py  azure_openai.py
