[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
package-mode = false

[tool.poetry.scripts]
dev = "fastapi dev main.py"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["standard"], version = "^0.115.5"}
uvicorn = {extras = ["standard"], version = "^0.32.1"}
langchain = "^0.3.9"
langchain-openai = "^0.2.10"
pydantic = "^2.10.2"
pydantic-settings = "^2.6.1"
azure-identity = "^1.19.0"
azure-search-documents = "^11.5.2"
langchain-community = "^0.3.9"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
black = "^24.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
